--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     },
     "scripts": {
 		"build": "jekyll build",
-        "start": "bundle exec jekyll serve -w -l --host 0.0.0.0",
+        "start": "bundle exec jekyll serve -w -l",
         "dev": "grunt watch & npm run start",
         "boil": "git push boilerplate boilerplate:master",
         "push": "git push origin master --tag"
